// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail> Snapshots and structure should render story 'Clickable' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--size-xxl lumx-thumbnail--theme-light"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="Click me"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="landscape1.jpg"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'CustomFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'Default' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--size-xxl lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="Image alt text"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="landscape1.jpg"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'DefaultFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`<Thumbnail> Snapshots and structure should render story 'IconFallback' 1`] = `
<div
  className="lumx-thumbnail lumx-thumbnail--theme-light"
>
  <div
    className="lumx-thumbnail__background"
    style={
      Object {
        "display": undefined,
        "visibility": "hidden",
      }
    }
  >
    <img
      alt="foo"
      className="lumx-thumbnail__image"
      loading="lazy"
      src="foo"
      style={Object {}}
    />
  </div>
</div>
`;
